--- a/app/templates/especificador.html
+++ b/app/templates/especificador.html
@@ -1,11 +1,11 @@
 <ion-view>
-	<ion-nav-title><img src="img/logo9.png" style="padding-top:8px"/></ion-nav-title>
+	<ion-nav-title><img src="img/logo4.png" style="padding-top:10px; width: 65%;"/></ion-nav-title>
 	<ion-nav-buttons side="left">
     <button class="button back-button buttons button-clear header-item" ng-click="goBack()">
       <i class="icon ion-ios-arrow-back"></i> 
     </button>
 	</ion-nav-buttons>	
-	<ion-content>
+	<ion-content style="background: #fff;">
 		<div class="hero" style="background-color: #27386D">
 			<div class="content">
 				<div class="avatar" style="background-image: url('img/user.jpg');"></div>				
@@ -27,72 +27,76 @@
 					</a>-->
 				</div>				
 				<div ng-if="tabs==0">
-					<label class="item item-input item-floating-label">
-						<span class="input-label">Nome</span>
-						<input type="text" placeholder="Nome" ng-model="especificador1.nome" ng-disabled="true" style="background-color:white">
-					</label>
-					<label class="item item-input item-floating-label">
-						<span class="input-label">Nome</span>
-						<input type="text" placeholder="Nome" ng-model="especificador1.nome" ng-disabled="true" style="background-color:white">
-					</label>
-					<label class="item item-input item-floating-label">
-						<span class="input-label">Empresa</span>
-						<input type="text" placeholder="Empresa" ng-model="especificador1.empresa" ng-disabled="true" style="background-color:white">
-					</label>
-					<label class="item item-input item-floating-label">
-						<span class="input-label">Data Nascimento</span>
-						<input type="text" placeholder="Data Nascimento" ng-model="especificador1.data_nascimento" ng-disabled="true" ui-date-mask="DD-MM-YYYY" style="background-color:white">
-					</label>
-					<label class="item item-input item-floating-label">
-						<span class="input-label">CPF</span>
-						<input type="text" placeholder="CPF" ng-model="especificador1.cpf" ng-disabled="true"  ui-br-cpf-mask style="background-color:white">
-					</label>		   
-					<label class="item item-input item-floating-label">
-						<span class="input-label">RG</span>
-						<input type="text" placeholder="RG" ng-model="especificador1.rg" ng-disabled="true" style="background-color:white">
-					</label>			   
-					<label class="item item-input item-floating-label">
-						<span class="input-label">Telefone 1</span>
-						<input type="text" placeholder="Telefone 1" ng-model="especificador1.telefone" ui-br-phone-number ng-disabled="true" style="background-color:white">
-					</label>				   
-					<label class="item item-input item-floating-label">
-						<span class="input-label">Telefone 2</span>
-						<input type="text" placeholder="Telefone 2" ng-model="especificador1.celular" ui-br-phone-number ng-disabled="true" style="background-color:white">
-					</label>	
-					<label class="item item-input item-floating-label">
-						<span class="input-label">Profissão</span>
-						<input type="text" placeholder="Profissão" ng-model="especificador1.profissao" style="background-color:white">
-					</label>
-					<label class="item item-input item-floating-label">
-						<span class="input-label">Estado Cívil</span>
-						<input type="text" placeholder="Estado Cívil" ng-model="especificador1.estado_civil"ng-disabled="true" style="background-color:white">
-					</label>
+					<div class="im-wrapper">
+						<label class="item item-input item-floating-label">
+							<span class="input-label">Nome</span>
+							<input type="text" placeholder="Nome" ng-model="especificador1.nome" ng-disabled="true" style="background-color:white">
+						</label>
+						<label class="item item-input item-floating-label">
+							<span class="input-label">Nome</span>
+							<input type="text" placeholder="Nome" ng-model="especificador1.nome" ng-disabled="true" style="background-color:white">
+						</label>
+						<label class="item item-input item-floating-label">
+							<span class="input-label">Empresa</span>
+							<input type="text" placeholder="Empresa" ng-model="especificador1.empresa" ng-disabled="true" style="background-color:white">
+						</label>
+						<label class="item item-input item-floating-label">
+							<span class="input-label">Data Nascimento</span>
+							<input type="text" placeholder="Data Nascimento" ng-model="especificador1.data_nascimento" ng-disabled="true" ui-date-mask="DD-MM-YYYY" style="background-color:white">
+						</label>
+						<label class="item item-input item-floating-label">
+							<span class="input-label">CPF</span>
+							<input type="text" placeholder="CPF" ng-model="especificador1.cpf" ng-disabled="true"  ui-br-cpf-mask style="background-color:white">
+						</label>		   
+						<label class="item item-input item-floating-label">
+							<span class="input-label">RG</span>
+							<input type="text" placeholder="RG" ng-model="especificador1.rg" ng-disabled="true" style="background-color:white">
+						</label>			   
+						<label class="item item-input item-floating-label">
+							<span class="input-label">Telefone 1</span>
+							<input type="text" placeholder="Telefone 1" ng-model="especificador1.telefone" ui-br-phone-number ng-disabled="true" style="background-color:white">
+						</label>				   
+						<label class="item item-input item-floating-label">
+							<span class="input-label">Telefone 2</span>
+							<input type="text" placeholder="Telefone 2" ng-model="especificador1.celular" ui-br-phone-number ng-disabled="true" style="background-color:white">
+						</label>	
+						<label class="item item-input item-floating-label">
+							<span class="input-label">Profissão</span>
+							<input type="text" placeholder="Profissão" ng-model="especificador1.profissao" style="background-color:white">
+						</label>
+						<label class="item item-input item-floating-label">
+							<span class="input-label">Estado Cívil</span>
+							<input type="text" placeholder="Estado Cívil" ng-model="especificador1.estado_civil"ng-disabled="true" style="background-color:white">
+						</label>
+					</div>				
 				</div>				
-				<div ng-if="tabs==1">					
-					<label class="item item-input item-floating-label">
-						<span class="input-label">Endereço</span>
-						<input type="text" placeholder="Endereço" ng-model="especificador1.endereco" ng-disabled="true" style="background-color:white">
-					</label>
-					<label class="item item-input item-floating-label">
-						<span class="input-label">CEP</span>
-						<input type="text" placeholder="CEP" ng-model="especificador1.cep" ng-disabled="true" ui-br-cep-mask style="background-color:white">
-					</label>
-					<label class="item item-input item-floating-label">
-						<span class="input-label">Número</span>
-						<input type="text" placeholder="Número" ng-model="especificador1.numero"  ui-number-mask="0" ng-disabled="true" style="background-color:white">
-					</label>
-					<label class="item item-input item-floating-label">
-						<span class="input-label">Bairro</span>
-						<input type="text" placeholder="Bairro" ng-model="especificador1.bairro"  ng-disabled="true" style="background-color:white">
-					</label>
-					<label class="item item-input item-floating-label">
-						<span class="input-label">Cidade</span>
-						<input type="text" placeholder="Cidade" ng-model="especificador1.cidade"  ng-disabled="true" style="background-color:white">
-					</label>
-					<label class="item item-input item-floating-label">
-						<span class="input-label">UF</span>
-						<input type="text" placeholder="UF" ng-model="especificador1.uf"  ng-disabled="true" style="background-color:white">
-					</label>
+				<div ng-if="tabs==1">
+					<div class="im-wrapper">				
+						<label class="item item-input item-floating-label">
+							<span class="input-label">Endereço</span>
+							<input type="text" placeholder="Endereço" ng-model="especificador1.endereco" ng-disabled="true" style="background-color:white">
+						</label>
+						<label class="item item-input item-floating-label">
+							<span class="input-label">CEP</span>
+							<input type="text" placeholder="CEP" ng-model="especificador1.cep" ng-disabled="true" ui-br-cep-mask style="background-color:white">
+						</label>
+						<label class="item item-input item-floating-label">
+							<span class="input-label">Número</span>
+							<input type="text" placeholder="Número" ng-model="especificador1.numero"  ui-number-mask="0" ng-disabled="true" style="background-color:white">
+						</label>
+						<label class="item item-input item-floating-label">
+							<span class="input-label">Bairro</span>
+							<input type="text" placeholder="Bairro" ng-model="especificador1.bairro"  ng-disabled="true" style="background-color:white">
+						</label>
+						<label class="item item-input item-floating-label">
+							<span class="input-label">Cidade</span>
+							<input type="text" placeholder="Cidade" ng-model="especificador1.cidade"  ng-disabled="true" style="background-color:white">
+						</label>
+						<label class="item item-input item-floating-label">
+							<span class="input-label">UF</span>
+							<input type="text" placeholder="UF" ng-model="especificador1.uf"  ng-disabled="true" style="background-color:white">
+						</label>
+					</div>
 				</div>
 			</div>
 		</ion-card>
