--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -10,29 +10,17 @@
         <ion-nav-view name="menuContent" ng-class="{expanded: isExpanded}" ></ion-nav-view>
     </ion-side-menu-content>
     <ion-side-menu side="right">
-        <ion-header-bar class="dark-bg expanded">
-            <span class="avatar" style="background: url('img/logo6.png'); background-size: cover; top: 5px; left: 65px; height: 140px; width: 140px;"></span>           
+        <ion-header-bar class="dark-bg expanded" style="background: url(img/back2.png); background-position: center;">
+            <span class="avatar" style="background: url('img/logo6.png'); background-size: cover; top: 5px; left: 65px; height: 140px; width: 140px;"></span>      
         </ion-header-bar>
-        <ion-content class="has-expanded-header">
+        <ion-content class="has-expanded-header" style="background-color:#ffffff">
             <ion-list>
-				<ion-item nav-clear menu-close ui-sref="app.dashboard">
-                    Dashboard
-                </ion-item>
-				<ion-item nav-clear menu-close ui-sref="app.perfil">
-                    Perfil
-                </ion-item>
-				<ion-item nav-clear menu-close ui-sref="app.especificadores">
-                    Especificadores
-                </ion-item>
-				<ion-item nav-clear menu-close ui-sref="app.empresas">
-                    Empresas
-                </ion-item>         
-                <ion-item nav-clear menu-close ui-sref="app.notificacoes">
-                    Notificações
-                </ion-item>                
-                <ion-item nav-clear menu-close ng-click="modal.show()">
-                    Sair
-                </ion-item>
+				<ion-item nav-clear menu-close ui-sref="app.dashboard"><i class="icon ion-speedometer"></i> Dashboard</ion-item>
+				<ion-item nav-clear menu-close ui-sref="app.perfil"><i class="icon ion-person"></i> Perfil</ion-item>
+				<ion-item nav-clear menu-close ui-sref="app.especificadores"><i class="icon ion-person-stalker"></i> Especificadores</ion-item>
+				<ion-item nav-clear menu-close ui-sref="app.empresas"><i class="icon ion-home"></i> Empresas</ion-item>         
+                <ion-item nav-clear menu-close ui-sref="app.notificacoes"><i class="icon ion-android-notifications"></i> Notificações</ion-item>                
+                <ion-item nav-clear menu-close ng-click="modal.show()" style="font-size:16px;"><i class="icon ion-android-exit"></i> Sair</ion-item>
             </ion-list>
         </ion-content>
     </ion-side-menu>
@@ -54,4 +42,4 @@
           </div>
         </ion-content>
       </ion-modal-view>
-    </script>
+</script>
