--- a/app/templates/notificacoes.html
+++ b/app/templates/notificacoes.html
@@ -1,21 +1,26 @@
 <ion-view>
-	<ion-nav-title><img src="img/logo9.png" style="padding-top:5px"/></ion-nav-title>
+	<ion-nav-title><img src="img/logo4.png" style="padding-top:10px; width: 65%;"/></ion-nav-title>
 	<ion-nav-buttons side="left">
     <button class="button back-button buttons button-clear header-item" ng-click="goBack()">
       <i class="icon ion-ios-arrow-back"></i> 
     </button>
 	</ion-nav-buttons>
-	<ion-content>		
+	<ion-content style="background: #fff;">	
 		<ion-card class="text-center">			
-			<h3>Notificações</h3>
+			<div class="bar bar-subheader bar-stable static text-center">
+				<strong class="title" style="font-size: 20px; padding-top: 5px; color: #ffffff;">Notificações</strong>
+			</div>
 			<div class="list"  style="padding-bottom:40px">
-				<a ng-repeat="item in notificacoes" href="#/{{item.id}} " ng-style="set_color(item)" class="item item-thumbnail-left">
-				  <i class="icon ion-ribbon-b notificacaoLista" ng-if="item.tipo==1"></i>
-				  <i class="icon ion-calendar notificacaoLista" ng-if="item.tipo ==2"></i>
-				  <i class="icon ion-home notificacaoLista" ng-if="item.tipo==3"></i>		
-				  <h2 style="white-space:initial;">{{ item.title }}</h2>
-				  <h4 style="padding-top:10px;white-space: initial; ">{{ item.content }}</h4>
-				</a>
+
+					<a ng-repeat="item in notificacoes" class="item item-avatar item-icon-right"  ng-style="set_color(item)">
+						<img src="img/premio.png" ng-if="item.tipo==1">
+						<img src="img/calendario.png" ng-if="item.tipo==2">
+						<img src="img/empresa.png" ng-if="item.tipo==3">
+						<h2 style="text-align: left;">{{ item.title }}</h2>
+						<p style="text-align: left;">{{ item.content }}</p>
+						<i class="icon ion-chevron-right muted small-icon"></i>
+					</a>
+				
 			</div> 
 		</ion-card>	
 		<br><br>
