--- a/app/templates/perfil.html
+++ b/app/templates/perfil.html
@@ -1,14 +1,13 @@
 <ion-view>
-	<ion-nav-title><img src="img/logo9.png" style="padding-top:8px"/></ion-nav-title>
+	<ion-nav-title><img src="img/logo4.png" style="padding-top:10px; width: 65%;"/></ion-nav-title>
 	<ion-nav-buttons side="left">
     <button class="button back-button buttons button-clear header-item" ng-click="goBack()">
       <i class="icon ion-ios-arrow-back"></i> 
     </button>
-	</ion-nav-buttons>	
-	
-	<ion-content>			
-		<form name="formPerfil">
-		<div class="hero" style="background-color: #27386D">
+	</ion-nav-buttons>
+	<ion-content style="background: #fff;">
+	<form name="formPerfil">
+		<div class="hero" style="background-color: #27386D; height: 220px;">
 			<div class="content">
 				<div class="avatar" style="background-image: url('img/user.jpg');"></div>
 				<h3 ng-if="user.login.id_tipo_login==3">{{user.especificador.nome}}</h3>
@@ -19,13 +18,9 @@
 				<h4 style="font-style: italic;" ng-if="user.login.id_tipo_login==4">Cliente</h4>
 				<h4 style="font-style: italic;" ng-if="user.login.id_tipo_login==2">Empresa</h4>
 				<h4 style="font-style: italic;" ng-if="user.login.id_tipo_login==1">Administrador</h4>
+				<a href=""><h5 style="margin-bottom: 15px; font-size: 12px;">(Alterar Imagem)</h5></a>
 			</div>
 		</div>	
-		<div class="row">
-			<div class="col-50 col-offset-25">
-				<button class="button ">Alterar Imagem</button>	
-			</div>
-		</div>
 		<ion-card class="text-center">
 			<div class="list" style="padding-bottom:10px">				
 				<div class="tabs tabs-dark tabs-icon-top static">
@@ -36,127 +31,133 @@
 						<i class="icon ion-map"></i> Endereço
 					</a>
 					<a ng-click="changeTabs(2)" class="tab-item" ng-show="user.login.id_tipo_login==3">
-						<i class="icon ion-images"></i> Financeiro
+						<i class="icon ion-social-usd"></i> Financeiro
 					</a>
 					<a ng-click="changeTabs(3)" class="tab-item">
-						<i class="icon ion-images"></i> Senha
+						<i class="icon ion-locked"></i> Senha
 					</a>
 				</div>				
 				<div ng-show="tabs==0">
-					<label class="item item-input item-floating-label">
-						<span class="input-label">Nome</span>
-						<input type="text" placeholder="Nome" name="nome" ng-model="perfil.nome" style="background-color:white" required>
-						<div ng-messages="formPerfil.nome.$error">
-						  <div ng-message="required">
-							Favor inserir um nome para o especificador
-						  </div>						  
-						</div>					
-					</label>
-					<label class="item item-input item-floating-label">
-						<span class="input-label">E-mail</span>
-						<input type="text" placeholder="Nome" name="email" ng-model="login.email" ng-disabled="true" style="background-color:white">
-					</label>
-					<label class="item item-input item-floating-label" ng-show="user.login.id_tipo_login==4 || user.login.id_tipo_login==3">
-						<span class="input-label">Empresa</span>
-						<input type="text" placeholder="Empresa" name="empresa" ng-model="perfil.empresa"  style="background-color:white">
-					</label>
-					<label class="item item-input item-floating-label" ng-show="user.login.id_tipo_login==2">
-						<span class="input-label">Segmento</span>
-						<input type="text" placeholder="Segmento" name="segmento" ng-model="perfil.segmento"  style="background-color:white">
-					</label>
-					<label class="item item-input item-floating-label" ng-show="user.login.id_tipo_login==2">
-						<span class="input-label">Responsável</span>
-						<input type="text" placeholder="Responsável" name="responsavel" ng-model="perfil.responsavel"  style="background-color:white">
-					</label>
-					<label class="item item-input item-floating-label" ng-show="user.login.id_tipo_login==3 || user.login.id_tipo_login==4">
-						<span class="input-label">Data Nascimento</span>
-						<input type="text" placeholder="Data Nascimento" name="data_nascimento" ng-model="perfil.data_nascimento"  ui-date-mask="DD-MM-YYYY" style="background-color:white">
-					</label>
-					<label class="item item-input item-floating-label" ng-show="user.login.id_tipo_login==3">
-						<span class="input-label">CPF</span>
-						<input type="text" placeholder="CPF" ng-model="perfil.cpf" name="cpf"   ui-br-cpf-mask style="background-color:white">
-					</label>		   
-					<label class="item item-input item-floating-label" ng-show="user.login.id_tipo_login==3">
-						<span class="input-label">RG</span>
-						<input type="text" placeholder="RG" ng-model="perfil.rg" name="rg"  style="background-color:white">
-					</label>			   
-					<label class="item item-input item-floating-label" required>
-						<span class="input-label">Telefone 1</span>
-						<input type="text" placeholder="Telefone 1" ng-model="perfil.telefone" name="telefone" ui-br-phone-number  style="background-color:white">
-						<div ng-messages="formPerfil.telefone.$error">
-						  <div ng-message="required">
-							Favor inserir telefone.
-						  </div>						  
-						</div>
-					</label>				   
-					<label class="item item-input item-floating-label">
-						<span class="input-label">Telefone 2</span>
-						<input type="text" placeholder="Telefone 2" ng-model="perfil.celular" name="celular" ui-br-phone-number  style="background-color:white">
-					</label>
-					<label class="item item-input item-floating-label" ng-show="user.login.id_tipo_login==3">
-						<span class="input-label">Profissão</span>
-						<input type="text" placeholder="Profissão" ng-model="perfil.profissao" name="profissao" style="background-color:white">
-					</label>
-					<label class="item item-input item-floating-label" ng-show="user.login.id_tipo_login==3">
-						<span class="input-label">Estado Cívil</span>
-						<input type="text" placeholder="Estado Cívil" ng-model="perfil.estado_civil" name="estado_civil" style="background-color:white">
-					</label>
+					<div class="im-wrapper">
+						<label class="item item-input item-floating-label">
+							<span class="input-label">Nome</span>
+							<input type="text" placeholder="Nome" name="nome" ng-model="perfil.nome"  required>
+							<div ng-messages="formPerfil.nome.$error">
+							  <div ng-message="required">
+							  </div>						  
+							</div>					
+						</label>
+						<label class="item item-input item-floating-label">
+							<span class="input-label">E-mail</span>
+							<input type="text" placeholder="Nome" name="email" ng-model="login.email" ng-disabled="true" >
+						</label>
+						<label class="item item-input item-floating-label" ng-show="user.login.id_tipo_login==4 || user.login.id_tipo_login==3">
+							<span class="input-label">Empresa</span>
+							<input type="text" placeholder="Empresa" name="empresa" ng-model="perfil.empresa"  >
+						</label>
+						<label class="item item-input item-floating-label" ng-show="user.login.id_tipo_login==2">
+							<span class="input-label">Segmento</span>
+							<input type="text" placeholder="Segmento" name="segmento" ng-model="perfil.segmento"  >
+						</label>
+						<label class="item item-input item-floating-label" ng-show="user.login.id_tipo_login==2">
+							<span class="input-label">Responsável</span>
+							<input type="text" placeholder="Responsável" name="responsavel" ng-model="perfil.responsavel"  >
+						</label>
+						<label class="item item-input item-floating-label" ng-show="user.login.id_tipo_login==3 || user.login.id_tipo_login==4">
+							<span class="input-label">Data Nascimento</span>
+							<input type="text" placeholder="Data Nascimento" name="data_nascimento" ng-model="perfil.data_nascimento"  ui-date-mask="DD-MM-YYYY" >
+						</label>
+						<label class="item item-input item-floating-label" ng-show="user.login.id_tipo_login==3">
+							<span class="input-label">CPF</span>
+							<input type="text" placeholder="CPF" ng-model="perfil.cpf" name="cpf"   ui-br-cpf-mask >
+						</label>		   
+						<label class="item item-input item-floating-label" ng-show="user.login.id_tipo_login==3">
+							<span class="input-label">RG</span>
+							<input type="text" placeholder="RG" ng-model="perfil.rg" name="rg"  >
+						</label>			   
+						<label class="item item-input item-floating-label" required>
+							<span class="input-label">Telefone 1</span>
+							<input type="text" placeholder="Telefone 1" ng-model="perfil.telefone" name="telefone" ui-br-phone-number  >
+							<div ng-messages="formPerfil.telefone.$error">
+							  <div ng-message="required">
+								Favor inserir telefone.
+							  </div>						  
+							</div>
+						</label>				   
+						<label class="item item-input item-floating-label">
+							<span class="input-label">Telefone 2</span>
+							<input type="text" placeholder="Telefone 2" ng-model="perfil.celular" name="celular" ui-br-phone-number  >
+						</label>
+						<label class="item item-input item-floating-label" ng-show="user.login.id_tipo_login==3">
+							<span class="input-label">Profissão</span>
+							<input type="text" placeholder="Profissão" ng-model="perfil.profissao" name="profissao" >
+						</label>
+						<label class="item item-input item-floating-label" ng-show="user.login.id_tipo_login==3">
+							<span class="input-label">Estado Cívil</span>
+							<input type="text" placeholder="Estado Cívil" ng-model="perfil.estado_civil" name="estado_civil" >
+						</label>
+					</div>				
 				</div>				
-				<div ng-show="tabs==1">					
-					<label class="item item-input item-floating-label">
-						<span class="input-label">Endereço</span>
-						<input type="text" placeholder="Endereço" ng-model="perfil.endereco" name="endereco" style="background-color:white">
-					</label>
-					<label class="item item-input item-floating-label">
-						<span class="input-label">CEP</span>
-						<input type="text" placeholder="CEP" ng-model="perfil.cep" name="cep"  ui-br-cep-mask style="background-color:white">
-					</label>
-					<label class="item item-input item-floating-label">
-						<span class="input-label">Número</span>
-						<input type="text" placeholder="Número" ng-model="perfil.numero" name="numero"  ui-number-mask="0"  style="background-color:white">
-					</label>
-					<label class="item item-input item-floating-label">
-						<span class="input-label">Bairro</span>
-						<input type="text" placeholder="Bairro" ng-model="perfil.bairro" name="bairro"  style="background-color:white">
-					</label>
-					<label class="item item-input item-floating-label">
-						<span class="input-label">Cidade</span>
-						<input type="text" placeholder="Cidade" ng-model="perfil.cidade" name="cidade"  style="background-color:white">
-					</label>
-					<label class="item item-input item-floating-label">
-						<span class="input-label">UF</span>
-						<input type="text" placeholder="UF" ng-model="perfil.uf" name="uf" style="background-color:white">
-					</label>
+				<div ng-show="tabs==1">
+					<div class="im-wrapper">				
+						<label class="item item-input item-floating-label">
+							<span class="input-label">Endereço</span>
+							<input type="text" placeholder="Endereço" ng-model="perfil.endereco" name="endereco" >
+						</label>
+						<label class="item item-input item-floating-label">
+							<span class="input-label">CEP</span>
+							<input type="text" placeholder="CEP" ng-model="perfil.cep" name="cep"  ui-br-cep-mask >
+						</label>
+						<label class="item item-input item-floating-label">
+							<span class="input-label">Número</span>
+							<input type="text" placeholder="Número" ng-model="perfil.numero" name="numero"  ui-number-mask="0"  >
+						</label>
+						<label class="item item-input item-floating-label">
+							<span class="input-label">Bairro</span>
+							<input type="text" placeholder="Bairro" ng-model="perfil.bairro" name="bairro"  >
+						</label>
+						<label class="item item-input item-floating-label">
+							<span class="input-label">Cidade</span>
+							<input type="text" placeholder="Cidade" ng-model="perfil.cidade" name="cidade"  >
+						</label>
+						<label class="item item-input item-floating-label">
+							<span class="input-label">UF</span>
+							<input type="text" placeholder="UF" ng-model="perfil.uf" name="uf" >
+						</label>
+					</div>
 				</div>
-				<div ng-show="tabs==2" ng-show="user.login.id_tipo_login==3">					
-					<label class="item item-input item-floating-label">
-						<span class="input-label">Dados Bancários</span>
-						<textarea placeholder="Dados Bancários" name="dados_bancarios" ng-model="perfil.dados_bancarios" rows="3" style="background-color:white"></textarea>
-					</label>					
+				<div ng-show="tabs==2" ng-show="user.login.id_tipo_login==3">
+					<div class="im-wrapper">					
+						<label class="item item-input item-floating-label">
+							<span class="input-label">Dados Bancários</span>
+							<textarea placeholder="Dados Bancários" name="dados_bancarios" ng-model="perfil.dados_bancarios" rows="3" ></textarea>
+						</label>					
+					</div>
 				</div>
-				<div ng-show="tabs==3">					
-					<label class="item item-input item-floating-label">
-						<span class="input-label">Senha</span>
-						<input type="password" placeholder="Senha" ng-model="login.novaSenha" name="senha" style="background-color:white">
-					</label>
-					<label class="item item-input item-floating-label">
-						<span class="input-label">Repetir Senha</span>
-						<input type="password" placeholder="Repetir Senha" ng-model="login.repetirNovaSenha" name="repetir_senha"  style="background-color:white">
-					</label>
-					<br>
-					<div ng-messages="formPerfil.repetir_senha.$error">
-						<div ng-message="diferentes">
-							As senhas devem ser iguais.
-						</div>						  
-					</div>					
+				<div ng-show="tabs==3">	
+					<div class="im-wrapper">					
+						<label class="item item-input item-floating-label">
+							<span class="input-label">Senha</span>
+							<input type="password" placeholder="Senha" ng-model="login.novaSenha" name="senha" >
+						</label>
+						<label class="item item-input item-floating-label">
+							<span class="input-label">Repetir Senha</span>
+							<input type="password" placeholder="Repetir Senha" ng-model="login.repetirNovaSenha" name="repetir_senha"  >
+						</label>
+						<br>
+						<div ng-messages="formPerfil.repetir_senha.$error">
+							<div ng-message="diferentes">
+								As senhas devem ser iguais.
+							</div>						  
+						</div>					
+					</div>
 				</div>
 			</div>
-			<div class="col-33 col-offset-33">
-				<button class="button" ng-click="salvar(formPerfil)">Salvar</button>	
+			<div class="col-33 col-offset-33" style="margin-bottom: 100px;">
+				<button class="button tema" ng-click="salvar(formPerfil)">Salvar</button>	
 			</div>
 		</ion-card>			
 		</form>
-		<br><br><br>
 	</ion-content>
 	<div class="bar bar-footer bar-dark">
 		<h1 class="title"><i class="icon ion-heart"></i> Desenvolvido por DNBproject</h1>
