--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -1,8 +1,8 @@
 <ion-view>
-	<ion-nav-title><img src="img/logo9.png" style="padding-top:5px"/></ion-nav-title>
+	<ion-nav-title><img src="img/logo4.png" style="padding-top:10px; width: 65%;"/></ion-nav-title>
 	<ion-nav-buttons side="left">    
 	</ion-nav-buttons>
-	<ion-content>	
+	<ion-content style="background: #fff;">	
 		<div class="hero" style="background-color: #27386D">
             <div class="content">
                 <div class="avatar" style="background-image: url('img/user.jpg');"></div>
@@ -16,45 +16,49 @@
 				<h4 style="font-style: italic;" ng-if="user.login.id_tipo_login==1">Administrador</h4>
             </div>
         </div>		
-		<div class="list">           
-			<a ui-sref="app.pontuacoes" class="item item-avatar item-icon-left" ng-if="user.login.id_tipo_login==3">               
-                <h2>{{pontuacaoAtual}} Pontos</h2>
-				 <p>Ver Pontos</p>
+		<div class="list" style="padding-top:5px;">           
+			<a ui-sref="app.pontuacoes" class="item item-avatar item-icon-left" ng-if="user.login.id_tipo_login==3">
+                <span class="itens_medios">Total de Pontos</span>
+				<span class="badge badge-assertive">{{pontuacaoAtual}}</span>			
                 <i class="icon ion-trophy muted"></i>
             </a>
-			<a ui-sref="app.clientes" class="item item-avatar item-icon-left" ng-if="user.login.id_tipo_login==3">               
-                <h2>{{totalIndicacoes}} Indicações</h2>
-				 <p>Ver Indicações</p>
-                <i class="icon ion-person-add muted"></i>
+			<a ui-sref="app.clientes" class="item item-avatar item-icon-left" ng-if="user.login.id_tipo_login==3">
+			    <span class="itens_medios">Total de Indicações</span>
+				<span class="badge badge-assertive">{{totalIndicacoes}}</span>
+                <i class="icon ion-android-hand muted"></i>
             </a>
 			<a ui-sref="app.clientes" class="item item-avatar item-icon-left" ng-if="user.login.id_tipo_login==2">               
                 <h2>Ver Clientes</h2>
 				<i class="icon ion-person-add muted"></i>
             </a>
 			<a ui-sref="app.notificacoes" class="item item-avatar item-icon-left">                
-                <h2>10 Novas Notificações</h2>
-                <p>Ver Notificações</p>
-                <i class="icon ion-clipboard muted"></i>
+                <span class="itens_medios">Notificações</span>
+				<span class="badge badge-assertive">10 Novas</span>
+                <i class="icon ion-android-notifications muted"></i>
+
             </a>
 			 <a ui-sref="app.perfil" class="item item-avatar item-icon-left">               
                 <h2>Ver Perfil</h2>               
                 <i class="icon ion-person muted"></i>
             </a>
-			<a ui-sref="app.visitas" class="item item-avatar item-icon-left" ng-if="user.login.id_tipo_login==3 || user.login.id_tipo_login==4">               
-                <h2>{{totalVisitas}} de 13 empresas Visitadas</h2>
-				 <p>Ver Visitas</p>
-                <i class="icon ion-log-in muted"></i>
+			<a ui-sref="app.visitas" class="item item-avatar item-icon-left" ng-if="user.login.id_tipo_login==3 || user.login.id_tipo_login==4">
+                <span class="itens_medios">Empresas Visitadas</span>
+				<span class="badge badge-assertive">{{totalVisitas}} de 16</span>
+               <i class="icon ion-coffee muted"></i>
             </a>  
-			<a class="item item-avatar item-icon-left" ng-if="user.login.id_tipo_login==2">               
-                <h2>Presença Mensal: 12/14 </h2>
+			<a class="item item-avatar item-icon-left" ng-if="user.login.id_tipo_login==2">
+                <span class="itens_medios">Presença Mensal</span>
+				<span class="badge badge-assertive">12/14</span>			
                 <i class="icon ion-calendar muted"></i>
             </a>
-			<a class="item item-avatar item-icon-left" ng-if="user.login.id_tipo_login==2">               
-                <h2>Valor Débito: R$200,00 </h2>
+			<a class="item item-avatar item-icon-left" ng-if="user.login.id_tipo_login==2"> 
+                <span class="itens_medios">Valor Débito</span>
+				<span class="badge badge-assertive">R$200,00</span>			
                 <i class="icon ion-arrow-graph-down-right muted"></i>
             </a>
-			<a class="item item-avatar item-icon-left" ng-if="user.login.id_tipo_login==2">               
-                <h2>Valor Créditos: R$200,00 </h2>
+			<a class="item item-avatar item-icon-left" ng-if="user.login.id_tipo_login==2">  
+                <span class="itens_medios">Valor Créditos</span>
+				<span class="badge badge-assertive">R$200,00</span>	
                 <i class="icon ion-arrow-graph-up-right muted"></i>
             </a>                      
 			<br><br>
