--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -115,3 +115,24 @@ input[disabled], select[disabled], textarea[disabled], input[readonly]:not(.clon
 .checkbox input:disabled:checked:before, .checkbox input:disabled:checked + .checkbox-icon:before {
     background: #27386d;
 }
+.bar .title + .button:last-child, .bar > .button + .button:last-child, .bar > .button.pull-right, .bar .buttons.pull-right, .bar .title + .buttons {
+    position: absolute;
+    right: 5px;
+	top: 0px;
+}
+.menu .bar.bar-header.expanded {
+    background-image: url(../img/back2.png);
+    background-size: 120%;
+    background-position: 0%;
+    transition: all .5s ease-in-out;
+}
+.menu .avatar {
+    top: 16px;
+    left: 16px;
+    height: 75px;
+    width: 75px;
+}
+.hero {
+    background-image: url(../img/back2.png);
+	background-position: center;
+}
