--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,7 +1,7 @@
 <ion-view hide-nav-bar="true" view-title="Login"> 
-  <ion-content>
+  <ion-content style="background-image: url(../img/backlogin.png)">
 	  <div class="im-wrapper">
-		<form name="formLogin" style="padding-top: 10%;">
+		<form name="formLogin" style="padding-top: 15%;">
 		  <div class="row">
 			<ion-col col-12 style="margin: 0 auto; padding-bottom:20px;">
 				<img src="img/login.png" width="200px">
@@ -50,7 +50,7 @@
 		</form>
 	</div> 
   </ion-content>
-  <div class="bar bar-footer">
+  <div class="bar bar-footer" style="background-color: transparent!important;">
 		<h5 class="title"><i class="icon ion-heart"></i> Desenvolvido por DNBproject</h5>
 	</div>
 </ion-view>
