--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -41,8 +41,8 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
     color: #b2b2b2;
 }
 .button.button-login {
-    border-color: #0c63ee;
-    background-color: #b2b2b2;
+    border-color: #12224c;
+    background-color: #ffffff;
     color: #111;
 }
 
