--- a/app/templates/especificador.html
+++ b/app/templates/especificador.html
@@ -33,8 +33,8 @@
 							<input type="text" placeholder="Nome" ng-model="especificador1.nome" ng-disabled="true" style="background-color:white">
 						</label>
 						<label class="item item-input item-floating-label">
-							<span class="input-label">Nome</span>
-							<input type="text" placeholder="Nome" ng-model="especificador1.nome" ng-disabled="true" style="background-color:white">
+							<span class="input-label">Sobrenome</span>
+							<input type="text" placeholder="Sobrenome" ng-model="especificador1.sobrenome" ng-disabled="true" style="background-color:white">
 						</label>
 						<label class="item item-input item-floating-label">
 							<span class="input-label">Empresa</span>
