--- a/app/templates/clientes.html
+++ b/app/templates/clientes.html
@@ -14,12 +14,13 @@
 			  <i class="icon ion-search placeholder-icon"></i>
 			  <input type="search" placeholder="Buscar" ng-model="busca">
 			</label>
-			<p class="output" style="padding-top:15px"  ng-if=" user.login.id_tipo_login==1 || user.login.id_tipo_login==2">Total da busca: <b>{{filtered.length}}</b></p>
+			<p class="output" style="padding-top:15px"  ng-show=" user.login.id_tipo_login==1 || user.login.id_tipo_login==2">Total da busca: <b>{{filtered.length}}</b></p>
+			<p class="output" style="padding-top:15px"  ng-show=" user.login.id_tipo_login==3"></p>
 			<ion-card class="text-center" ng-repeat="cliente in clientes | orderBy:'nome' | filter:busca as filtered" ng-if=" user.login.id_tipo_login==1 || user.login.id_tipo_login==2 || cliente.id_indicou == user.especificador.id ">					
 				<a ng-click="detalhes(cliente)" class="item item-avatar item-icon-right">
 					<i class="icon ion-person muted" style="left: 20px"></i>
-						<h2 style="text-align: left;">{{cliente.nome}}</h2>
-						<p style="text-align: left;">{{cliente.empresa}}</p>
+						<h2 style="text-align: left;">{{cliente.nome}} {{cliente.sobrenome}}</h2>
+						<p style="text-align: left;">{{cliente.nomeEmpresa}}</p>
 					<i class="icon ion-chevron-right muted small-icon"></i>
 				</a>				
 			</ion-card>
