--- a/app/templates/empresas.html
+++ b/app/templates/empresas.html
@@ -20,7 +20,10 @@
 						<img src="img/favico.png">
 						<!--<i class="icon ion-home muted" style="left: 16px;"></i>-->
 						<h2 style="text-align: left;">{{empresa.nome}}</h2>
-						<p style="text-align: left;">{{empresa.segmento}}</p>
+						<h2 style="text-align: left;">Segmento:{{empresa.segmento}}</h2>
+						<h2 style="text-align: left;" ng-if="user.login.id_tipo_login==2">Pontos: {{empresa.pontosEmpresa}}</h2>
+						<h2 style="text-align: left;" ng-if="user.login.id_tipo_login==2">Indicações: {{empresa.qtdIndicacoes}}</h2>
+						<h2 style="text-align: left;" ng-if="user.login.id_tipo_login==2">Presença: {{empresa.qtdPresenca}}</h2>
 						<i class="icon ion-chevron-right muted small-icon"></i>
 					</a>				
 				</ion-card>
