--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -18,8 +18,8 @@
             </div>
         </div>		
 		<div class="list" style="padding-top:5px;">	       
-            <a ui-sref="app.notificacoes" class="item item-avatar item-icon-left" ng-if="user.login.id_tipo_login==3">                
-                <span class="itens_medios">Pontos</span>
+            <a ui-sref="app.pontuacoes" class="item item-avatar item-icon-left" ng-if="user.login.id_tipo_login==3">                
+                <span class="itens_medios">Pontos12</span>
 				<span class="badge badge-assertive">{{pontuacaoAtual}}</span>
                 <i class="icon ion-trophy muted"></i>
             </a>
